--- a/VidCoder/Resources/Translations/CommonRes.eu.resx
+++ b/VidCoder/Resources/Translations/CommonRes.eu.resx
@@ -130,7 +130,9 @@ GNU Baimen Publiko Orokorraren kopia oso bat barneratu da programa honekin bater
   <data name="DefaultSubtitleToolTip" xml:space="preserve">
     <value>Markatu azpidatzi hau berezko bide bezala. Hau erakutsiko da irakurketan zehar beste bide bat hautatzen den arte.</value>
   </data>
-  
+  <data name="ForcedSubtitleToolTip" xml:space="preserve">
+    <value>Erakutsi behartutako azpidatziak bakarrik azpidatzi bide(eta)tik. Arrunt honek beste hizkuntzako elkarrizketa bit gutxi batzuk esanahi du.</value>
+  </data>
   <data name="OffsetSubtitleToolTip" xml:space="preserve">
     <value>Emaniko azpidatziak agertzeko aurrerapen edo atzerapen denbora kopurua.</value>
   </data>
@@ -278,5 +280,7 @@ GNU Baimen Publiko Orokorraren kopia oso bat barneratu da programa honekin bater
     <value>Lehenik</value>
     <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
-  
+  <data name="UpdatesDisabled32BitOSMessage" xml:space="preserve">
+    <value>Eguneraketak desgaitu egin dira bertsio berriek ez dituztelako jadanik 32-biteko sistema eragileak sostengatzen.</value>
+  </data>
 </root>
