--- a/VidCoder/Resources/Translations/CommonRes.ka.resx
+++ b/VidCoder/Resources/Translations/CommonRes.ka.resx
@@ -130,7 +130,9 @@
   <data name="DefaultSubtitleToolTip" xml:space="preserve">
     <value>ამ ტიტრის სტანდარტად არჩევა. ეს ტიტრი იქნება წარმოსახული ავტომატურად სანამ სხვა არ აირჩევა პერსონალურად.</value>
   </data>
-  
+  <data name="ForcedSubtitleToolTip" xml:space="preserve">
+    <value>წყაროდან მხოლოდ დაძალებული ტიტრის(ების) ჩვენება. როგორც წესი ნიშნავს, პატარა ფრაგმენტებს, სადაც უცხო ენაზეა დიალოგი.</value>
+  </data>
   <data name="OffsetSubtitleToolTip" xml:space="preserve">
     <value>ტიტრის მართვა, დროის წარმოსახვის დასაჩქარებლად ან შესაყოვნებლად.</value>
   </data>
@@ -278,5 +280,7 @@
     <value>პირველი</value>
     <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
-  
+  <data name="UpdatesDisabled32BitOSMessage" xml:space="preserve">
+    <value>აქტუალიზირება დეაქტივირებულია რამდენადაც, 32 ბიტიანი სისტემის მხარდაჭერა შეწყვეტილია.</value>
+  </data>
 </root>
