--- a/VidCoder/Resources/Translations/EncodeDetailsRes.es.resx
+++ b/VidCoder/Resources/Translations/EncodeDetailsRes.es.resx
@@ -124,7 +124,7 @@
     <value>Cola</value>
   </data>
   <data name="ScanPassLabel" xml:space="preserve">
-    <value>Pasada de escaneado:</value>
+    <value>Pasada de análisis:</value>
     <comment>This is the label for progress during the "scanning" pass of encoding. When you choose automatic subtitles it first needs to make a quick scan through the file to see which subtitles apply.</comment>
   </data>
   <data name="FirstPassLabel" xml:space="preserve">
