--- a/VidCoder/Resources/Translations/EnumsRes.ka.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.ka.resx
@@ -129,8 +129,12 @@
   <data name="Anamorphic_Strict" xml:space="preserve">
     <value>ზუსტი</value>
   </data>
-  
-  
+  <data name="CombDetect_fast" xml:space="preserve">
+    <value>ჩქარი</value>
+  </data>
+  <data name="CombDetect_permissive" xml:space="preserve">
+    <value>ნაკლებად მგრძნობიარე</value>
+  </data>
   <data name="Custom" xml:space="preserve">
     <value>პერსონალური</value>
   </data>
@@ -143,20 +147,49 @@
   <data name="Default" xml:space="preserve">
     <value>სტანდარტი</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DeinterlacePreset_bob" xml:space="preserve">
+    <value>Bob</value>
+    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  </data>
+  <data name="DeinterlacePreset_eedi2" xml:space="preserve">
+    <value>EEDI2</value>
+  </data>
+  <data name="DeinterlacePreset_eedi2bob" xml:space="preserve">
+    <value>EEDI2 Bob</value>
+  </data>
+  <data name="DeinterlacePreset_skipspatial" xml:space="preserve">
+    <value>სივრცის შემოწმების გამოტოვება</value>
+  </data>
+  <data name="Deinterlace_Decomb" xml:space="preserve">
+    <value>დეკომბი</value>
+  </data>
+  <data name="Deinterlace_Yadif" xml:space="preserve">
+    <value>Yadif</value>
+  </data>
+  <data name="DenoisePreset_light" xml:space="preserve">
+    <value>მსუბუქი</value>
+  </data>
+  <data name="DenoisePreset_medium" xml:space="preserve">
+    <value>საშუალო</value>
+  </data>
+  <data name="DenoisePreset_strong" xml:space="preserve">
+    <value>მძლავრი</value>
+  </data>
+  <data name="DenoisePreset_ultralight" xml:space="preserve">
+    <value>ულტრა მსუბუქი</value>
+  </data>
+  <data name="DenoiseTune_animation" xml:space="preserve">
+    <value>ანიმაცია</value>
+  </data>
+  <data name="DenoiseTune_film" xml:space="preserve">
+    <value>ფილმი</value>
+  </data>
+  <data name="DenoiseTune_grain" xml:space="preserve">
+    <value>მარცვალი</value>
+  </data>
+  <data name="DenoiseTune_highmotion" xml:space="preserve">
+    <value>სწრაფი მოძრაობა</value>
+  </data>
   <data name="Denoise_HQDN3D" xml:space="preserve">
     <value>hqdn3d</value>
   </data>
