--- a/VidCoder/Resources/Translations/MainRes.eu.resx
+++ b/VidCoder/Resources/Translations/MainRes.eu.resx
@@ -630,10 +630,26 @@
     <value>beste {0} izenburuk honen antzeko iraupena dute.</value>
     <comment>{0} is the number of titles that have a similar duration.</comment>
   </data>
-  
-  
-  
-  
-  
-  
+  <data name="UseBackupDatabaseLine" xml:space="preserve">
+    <value>{0} babeskopia agiri bat duzu. Erabiltzea nahi duzu?</value>
+    <comment>{0} is the version of the database file you have a backup for.</comment>
+  </data>
+  <data name="VideoPlayError" xml:space="preserve">
+    <value>Akatsa bideoa irakurtzerakoan.</value>
+  </data>
+  <data name="CustomVideoPlayerError" xml:space="preserve">
+    <value>Norbere bideo irakurgailua ezin da aurkitu hemen: {0}.</value>
+    <comment>{0} is the path to the custom video player.</comment>
+  </data>
+  <data name="SizingPresetUpgradeWarning" xml:space="preserve">
+    <value>Kontuz: Neurriraketa interfazea 2.0-arekin berritu da, hortaz badaiteke zure aurrezarpenak aldatu izana. Badaiteke hauek ikuskatu eta oraindik ongi ezarrita daudela zihurtzea nahi izatea.</value>
+  </data>
+  <data name="EnqueueFolderOfVideoFiles" xml:space="preserve">
+    <value>Lerrokatu Bideo Agirien Agiritegia...</value>
+  </data>
+  <data name="QueueMultipleScanErrorMessage" xml:space="preserve">
+    <value>Akatsak egon dira zenbait agiri eskaneatzerakoan eta ezin dira lerrora gehitu:
+
+{0}</value>
+  </data>
 </root>
