--- a/VidCoder/Resources/Translations/MiscRes.ko.resx
+++ b/VidCoder/Resources/Translations/MiscRes.ko.resx
@@ -117,136 +117,142 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AudioSelection" xml:space="preserve">
-    <value>Seleção de áudio</value>
+  <data name="AddButton" xml:space="preserve">
+    <value>추가</value>
   </data>
-  <data name="BurnInCheckBox" xml:space="preserve">
-    <value>Gravar em</value>
+  <data name="RefreshButton" xml:space="preserve">
+    <value>새로고침</value>
   </data>
-  <data name="DefaultCheckBox" xml:space="preserve">
-    <value>Padrão</value>
+  <data name="ChooseFromProcessesLabel" xml:space="preserve">
+    <value>기존 처리에서 선택하기:</value>
   </data>
-  <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
-    <value>Pesquisa de Áudio Externo</value>
+  <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
+    <value>자동 일시중지 처리 추가하기</value>
   </data>
-  <data name="IncludeAllTracksRadioButton" xml:space="preserve">
-    <value>Todas as faixas</value>
+  <data name="ProcessNameLabel" xml:space="preserve">
+    <value>처리 이름:</value>
   </data>
-  <data name="LanguagesRadioButton" xml:space="preserve">
-    <value>Idioma(s)</value>
+  <data name="ExceptionDialogMainText" xml:space="preserve">
+    <value>VidCoder에 예기치 않은 오류가 발생했습니다.</value>
   </data>
-  <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
-    <value>Somente se outro idioma de áudio</value>
-    <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the chosen audio track.</comment>
+  <data name="ExceptionDialogSubText" xml:space="preserve">
+    <value>향후에 이 문제를 고칠 수 있도록 이것을 보고해 주세요.</value>
   </data>
-  <data name="SubtitleSelection" xml:space="preserve">
-    <value>Seleção de legendas</value>
+  <data name="ExceptionWindowTitle" xml:space="preserve">
+    <value>예외</value>
   </data>
-  <data name="WindowTitle" xml:space="preserve">
-    <value>Seletor: {0}</value>
+  <data name="FileConflictDialogTitle" xml:space="preserve">
+    <value>파일 충돌</value>
   </data>
-  <data name="TitleSelection" xml:space="preserve">
-    <value>Seleção de título</value>
+  <data name="OverwriteButton" xml:space="preserve">
+    <value>덮어쓰기</value>
   </data>
-  <data name="PickerButtonFormat" xml:space="preserve">
-    <value>Seletor: {0}</value>
-    <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
+  <data name="AutoRenameButton" xml:space="preserve">
+    <value>자동 이름 변경</value>
   </data>
-  <data name="OutputLocation" xml:space="preserve">
-    <value>Local de saída</value>
+  <data name="FileConflictWarning" xml:space="preserve">
+    <value>파일이 {0}에 이미 존재합니다. 파일을 덮어쓰고 해당 인코드 작업의 새 출력 경로를 자동으로 찾을까요, 아니면 이 동작을 취소할까요?</value>
   </data>
-  <data name="OverrideDirectoryCheckBox" xml:space="preserve">
-    <value>Substituir o diretório:</value>
+  <data name="QueueFileConflictWarning" xml:space="preserve">
+    <value>대기열 작업은 이미 {0}에 출력 경로가 있습니다. 파일을 덮어쓰고 해당 인코드 작업의 새 출력 경로를 자동으로 찾을까요, 아니면 이 동작을 취소할까요?</value>
   </data>
-  <data name="PickerHelpText" xml:space="preserve">
-    <value>Escolhe automaticamente títulos, áudio, legendas e destino</value>
+  <data name="QueueColumnsDialogTitle" xml:space="preserve">
+    <value>대기열 세로열</value>
   </data>
-  <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
-    <value>Enfileira automaticamente após a verificação</value>
+  <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
+    <value>세로열을 추가, 삭제 또는 재정렬하려면 드래그 앤 드롭하세요.</value>
   </data>
-  <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
-    <value>Iniciar codificação após a verificação</value>
+  <data name="UnusedColumns" xml:space="preserve">
+    <value>미사용 세로열</value>
   </data>
-  <data name="UseGlobalSettingToolTip" xml:space="preserve">
-    <value>Use configuração global</value>
-    <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
+  <data name="UsedColumns" xml:space="preserve">
+    <value>사용된 새로열</value>
   </data>
-  <data name="PresetOverrideToolTip" xml:space="preserve">
-    <value>Isto substituirá qualquer predefinição escolhida na janela principal.</value>
+  <data name="ScanMultipleWindowTitle" xml:space="preserve">
+    <value>스캔 중...</value>
   </data>
-  <data name="EncodingSection" xml:space="preserve">
-    <value>Codificando</value>
-    <comment>The header for the Encoding section in the Picker window.</comment>
+  <data name="AboutVidCoderDialogTitle" xml:space="preserve">
+    <value>VidCoder 정보</value>
   </data>
-  <data name="PostEncodingSection" xml:space="preserve">
-    <value>Pós-codificação</value>
-    <comment>Header for the post-encoding section in the picker window.</comment>
+  <data name="LicenseLabel" xml:space="preserve">
+    <value>라이센스:</value>
   </data>
-  <data name="SendFileToLabel" xml:space="preserve">
-    <value>Envie arquivo para:</value>
-    <comment>Label for the option to run a program after encoding each file.</comment>
+  <data name="Version" xml:space="preserve">
+    <value>버전</value>
   </data>
-  <data name="PostEncodeArgumentsLabel" xml:space="preserve">
-    <value>Argumentos:</value>
-    <comment>The label for the arguments to pass to the post-encode executable.</comment>
+  <data name="BasedOnHandBrake" xml:space="preserve">
+    <value>HandBrake ({0})에 기반반</value>
   </data>
-  <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
-    <value>Os argumentos para passar para o programa. Use o {file} para o caminho de saída do arquivo.</value>
-    <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
+  <data name="Copyright" xml:space="preserve">
+    <value>© {0} VidCoder 개발진</value>
   </data>
-  <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
-    <value>Seletor especificou a predefinição de codificação.</value>
+  <data name="VersionFormat" xml:space="preserve">
+    <value>{0} ({1})</value>
+    <comment>First is version, second is architecture. For example: 1.4.2 (x64)</comment>
   </data>
-  <data name="AddLanguageButton" xml:space="preserve">
-    <value>Adicionar idioma</value>
+  <data name="BetaVersionFormat" xml:space="preserve">
+    <value>{0} 베타 ({1})</value>
+    <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
   </data>
-  <data name="AllTracksForTheseLanguagesRadioButton" xml:space="preserve">
-    <value>Todas as faixas para estes idiomas</value>
+  <data name="NameDialogTitle" xml:space="preserve">
+    <value>이름</value>
+    <comment>Title for dialog when  naming a preset or  picker</comment>
   </data>
-  <data name="AllTracksForThisLanguageRadioButton" xml:space="preserve">
-    <value>Todas as faixas para este idioma</value>
+  <data name="ChooseNamePreset" xml:space="preserve">
+    <value>프리셋 이름 선택하기:</value>
   </data>
-  <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
-    <value>Primeira faixa de cada idioma</value>
+  <data name="ApplyUpdateDialogTitle" xml:space="preserve">
+    <value>업데이트를 적용할까요?</value>
   </data>
-  <data name="FirstTrackRadioButton" xml:space="preserve">
-    <value>Primeira faixa</value>
+  <data name="ApplyUpdateDialogMessage" xml:space="preserve">
+    <value>업데이트를 다운로드했습니다. 지금 적용할까요?</value>
   </data>
-  <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>Marque a faixa de legenda como padrão, que ela aparecerá automaticamente durante a reprodução do vídeo.</value>
+  <data name="ViewFullChangelog" xml:space="preserve">
+    <value>전체 변경 사항 보기</value>
   </data>
-  <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>Marque a primeira faixa de legenda como padrão, que ela aparecerá automaticamente durante a reprodução do vídeo.</value>
+  <data name="DisableUpdatesButton" xml:space="preserve">
+    <value>업데이트 사용 안 함</value>
   </data>
-  <data name="FirstAsDefaultCheckBox" xml:space="preserve">
-    <value>Marcar primeiro como padrão</value>
-    <comment>Label for checkbox to mark the first subtitle as default.</comment>
+  <data name="NoticeMessageTitle" xml:space="preserve">
+    <value>공지</value>
   </data>
-  <data name="AllSubtitlesToolTip" xml:space="preserve">
-    <value>Inclua todas as legendas.</value>
+  <data name="UnsupportedOSError" xml:space="preserve">
+    <value>VidCoder는 사용 중인 운영 체계에서 지원되지 않습니다. 윈도우 XP와 서버 2003에서는 더 이상 동작하지 않습니다. VidCoder 1.4를 설치하거나 운영 체계를 업그레이드하세요.</value>
   </data>
-  <data name="SubtitleNoneToolTip" xml:space="preserve">
-    <value>Nenhuma legenda é incluída.</value>
+  <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
+    <value>곧 절전모드로 전환합니다</value>
   </data>
-  <data name="AudioFirstToolTip" xml:space="preserve">
-    <value>Inclui somente a primeira faixa de áudio.</value>
+  <data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
+    <value>곧 로그아웃합니다</value>
   </data>
-  <data name="AudioAllToolTip" xml:space="preserve">
-    <value>Inclui todas as faixas de áudio.</value>
+  <data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
+    <value>곧 시스템을 종료합니다</value>
   </data>
-  <data name="SubtitleFirstToolTip" xml:space="preserve">
-    <value>Inclui apenas a primeira legenda.</value>
+  <data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
+    <value>{0} 초 후 절전모드로 전환할 것입니다.</value>
   </data>
-  <data name="PresetLabel" xml:space="preserve">
-    <value>Usar a predefinição:</value>
+  <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
+    <value>{0} 초 후 로그아웃될 것입니다.</value>
   </data>
-  <data name="RemoveLanguageToolTip" xml:space="preserve">
-    <value>Remova este idioma.</value>
+  <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
+    <value>{0} 초 후 시스템을 종료할 것입니다.</value>
   </data>
-  <data name="SortLanguagesLabel" xml:space="preserve">
-    <value>Classificar o idioma(s) para o topo:</value>
+  <data name="EncodeCompleteWarning_Title" xml:space="preserve">
+    <value>인코딩을 완료했습니다.</value>
   </data>
-  <data name="ForcedOnlyCheckBox" xml:space="preserve">
-    <value>Somente forçada</value>
+  <data name="CouldNotFindVideoPlayerError" xml:space="preserve">
+    <value>{0}에 대한 비디오 재생기를 찾을 수 없습니다.</value>
+  </data>
+  <data name="ErrorPlayingSource" xml:space="preserve">
+    <value>소스 재생 중 오류.</value>
+  </data>
+  <data name="EncodeCompleteWarning_HibernateMessage" xml:space="preserve">
+    <value>{0} 초 후 최대절전모드로 전환할 것입니다.</value>
+  </data>
+  <data name="EncodeCompleteWarning_HibernateTitle" xml:space="preserve">
+    <value>곧 최대절전모드로 전환합니다</value>
+  </data>
+  <data name="ChooseNamePicker" xml:space="preserve">
+    <value>선택기 이름 선택하기:</value>
   </data>
 </root>
