--- a/VidCoder/Resources/Translations/PickerRes.ko.resx
+++ b/VidCoder/Resources/Translations/PickerRes.ko.resx
@@ -118,135 +118,135 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AudioSelection" xml:space="preserve">
-    <value>Seleção de áudio</value>
+    <value>오디오 선택</value>
   </data>
   <data name="BurnInCheckBox" xml:space="preserve">
-    <value>Gravar em</value>
+    <value>입히기</value>
   </data>
   <data name="DefaultCheckBox" xml:space="preserve">
-    <value>Padrão</value>
+    <value>기본값</value>
   </data>
   <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
-    <value>Pesquisa de Áudio Externo</value>
+    <value>외국어 오디오 검색</value>
   </data>
   <data name="IncludeAllTracksRadioButton" xml:space="preserve">
-    <value>Todas as faixas</value>
+    <value>모든 트랙</value>
   </data>
   <data name="LanguagesRadioButton" xml:space="preserve">
-    <value>Idioma(s)</value>
+    <value>언어</value>
   </data>
   <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
-    <value>Somente se outro idioma de áudio</value>
+    <value>오디오와 다른 언어인 경우에만</value>
     <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the chosen audio track.</comment>
   </data>
   <data name="SubtitleSelection" xml:space="preserve">
-    <value>Seleção de legendas</value>
+    <value>자막 선택</value>
   </data>
   <data name="WindowTitle" xml:space="preserve">
-    <value>Seletor: {0}</value>
+    <value>선택기: {0}</value>
   </data>
   <data name="TitleSelection" xml:space="preserve">
-    <value>Seleção de título</value>
+    <value>제목 선택</value>
   </data>
   <data name="PickerButtonFormat" xml:space="preserve">
-    <value>Seletor: {0}</value>
+    <value>선택기: {0}</value>
     <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
   </data>
   <data name="OutputLocation" xml:space="preserve">
-    <value>Local de saída</value>
+    <value>출력 위치</value>
   </data>
   <data name="OverrideDirectoryCheckBox" xml:space="preserve">
-    <value>Substituir o diretório:</value>
+    <value>폴더 무시:</value>
   </data>
   <data name="PickerHelpText" xml:space="preserve">
-    <value>Escolhe automaticamente títulos, áudio, legendas e destino</value>
+    <value>자동으로 제목, 오디오, 자막 및 대상을 선택합니다</value>
   </data>
   <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
-    <value>Enfileira automaticamente após a verificação</value>
+    <value>스캔 후에 자동으로 대기열에 넣습니다</value>
   </data>
   <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
-    <value>Iniciar codificação após a verificação</value>
+    <value>스캔 후 인코딩 시작하기</value>
   </data>
   <data name="UseGlobalSettingToolTip" xml:space="preserve">
-    <value>Use configuração global</value>
+    <value>전역 설정 사용하기</value>
     <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
   </data>
   <data name="PresetOverrideToolTip" xml:space="preserve">
-    <value>Isto substituirá qualquer predefinição escolhida na janela principal.</value>
+    <value>이것은 메인 창에서 선택된 어떤 프리셋보다 우선할 것입니다.</value>
   </data>
   <data name="EncodingSection" xml:space="preserve">
-    <value>Codificando</value>
+    <value>인코딩</value>
     <comment>The header for the Encoding section in the Picker window.</comment>
   </data>
   <data name="PostEncodingSection" xml:space="preserve">
-    <value>Pós-codificação</value>
+    <value>인코딩 후</value>
     <comment>Header for the post-encoding section in the picker window.</comment>
   </data>
   <data name="SendFileToLabel" xml:space="preserve">
-    <value>Envie arquivo para:</value>
+    <value>파일 전송:</value>
     <comment>Label for the option to run a program after encoding each file.</comment>
   </data>
   <data name="PostEncodeArgumentsLabel" xml:space="preserve">
-    <value>Argumentos:</value>
+    <value>인수:</value>
     <comment>The label for the arguments to pass to the post-encode executable.</comment>
   </data>
   <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
-    <value>Os argumentos para passar para o programa. Use o {file} para o caminho de saída do arquivo.</value>
+    <value>프로그램에 전달할 인수. 파일 출력 경로는 {file}을 사용하세요.</value>
     <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
   </data>
   <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
-    <value>Seletor especificou a predefinição de codificação.</value>
+    <value>선택기에서 인코딩 프리셋을 지정했습니다.</value>
   </data>
   <data name="AddLanguageButton" xml:space="preserve">
-    <value>Adicionar idioma</value>
+    <value>언어 추가하기기</value>
   </data>
   <data name="AllTracksForTheseLanguagesRadioButton" xml:space="preserve">
-    <value>Todas as faixas para estes idiomas</value>
+    <value>이 언어에 대해서 모든 트랙</value>
   </data>
   <data name="AllTracksForThisLanguageRadioButton" xml:space="preserve">
-    <value>Todas as faixas para este idioma</value>
+    <value>이 언어에 대해 모든 트랙</value>
   </data>
   <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
-    <value>Primeira faixa de cada idioma</value>
+    <value>각 언어의 첫 번째 트랙</value>
   </data>
   <data name="FirstTrackRadioButton" xml:space="preserve">
-    <value>Primeira faixa</value>
+    <value>첫 번째 트랙</value>
   </data>
   <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>Marque a faixa de legenda como padrão, que ela aparecerá automaticamente durante a reprodução do vídeo.</value>
+    <value>자막 트랙을 기본값으로 표시하여 비디오 재생시 자동으로 나타나게 할 것입니다.</value>
   </data>
   <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>Marque a primeira faixa de legenda como padrão, que ela aparecerá automaticamente durante a reprodução do vídeo.</value>
+    <value>첫 번째 자막 트랙을 기본값으로 표시하여 비디오 재생시 자동으로 나타나게 할 것입니다.</value>
   </data>
   <data name="FirstAsDefaultCheckBox" xml:space="preserve">
-    <value>Marcar primeiro como padrão</value>
+    <value>첫 번째를 기본값으로 표시하기</value>
     <comment>Label for checkbox to mark the first subtitle as default.</comment>
   </data>
   <data name="AllSubtitlesToolTip" xml:space="preserve">
-    <value>Inclua todas as legendas.</value>
+    <value>모든 자막을 포함합니다.</value>
   </data>
   <data name="SubtitleNoneToolTip" xml:space="preserve">
-    <value>Nenhuma legenda é incluída.</value>
+    <value>아무 자막도 포함하지 않았습니다.</value>
   </data>
   <data name="AudioFirstToolTip" xml:space="preserve">
-    <value>Inclui somente a primeira faixa de áudio.</value>
+    <value>첫 번째 오디오 트랙만 포함합니다.</value>
   </data>
   <data name="AudioAllToolTip" xml:space="preserve">
-    <value>Inclui todas as faixas de áudio.</value>
+    <value>모든 오디오 트랙을 포함합니다.</value>
   </data>
   <data name="SubtitleFirstToolTip" xml:space="preserve">
-    <value>Inclui apenas a primeira legenda.</value>
+    <value>첫 번째 자막만 포함합니다.</value>
   </data>
   <data name="PresetLabel" xml:space="preserve">
-    <value>Usar a predefinição:</value>
+    <value>프리셋 사용:</value>
   </data>
   <data name="RemoveLanguageToolTip" xml:space="preserve">
-    <value>Remova este idioma.</value>
+    <value>이 언어를 제거합니다.</value>
   </data>
   <data name="SortLanguagesLabel" xml:space="preserve">
-    <value>Classificar o idioma(s) para o topo:</value>
+    <value>언어를 맨 위로 정렬:</value>
   </data>
   <data name="ForcedOnlyCheckBox" xml:space="preserve">
-    <value>Somente forçada</value>
+    <value>강제 출력만</value>
   </data>
 </root>
