--- a/VidCoder/Resources/Translations/PreviewRes.es.resx
+++ b/VidCoder/Resources/Translations/PreviewRes.es.resx
@@ -124,7 +124,7 @@
     <value>Codificar Preview</value>
   </data>
   <data name="EncodePreviewClipToolTip" xml:space="preserve">
-    <value>Codifica y reproduce un pequeño clip de la vista actual. Usa los ajustes de codificacion actuales.</value>
+    <value>Codifica y reproduce un pequeño clip de la vista actual. Usa los ajustes de codificación actuales.</value>
   </data>
   <data name="GeneratingPreview" xml:space="preserve">
     <value>Generando preview...</value>
@@ -133,13 +133,13 @@
     <value>Preview de fuentes Blu-ray aun no soportado.</value>
   </data>
   <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
-    <value>No se encontro reproductor de DVD compatible. Instalar VLC o MPC-HC para utilizar esta funcion.</value>
+    <value>No se encontró reproductor de DVD compatible. Instalar VLC o MPC-HC para utilizar esta función.</value>
   </data>
   <data name="PlaySourceToolTip" xml:space="preserve">
     <value>Reproduce el video fuente.</value>
   </data>
   <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
-    <value>Fallo la generación de clip previsualizacion. Ver la ventana de Log para mas detalles.</value>
+    <value>Fallo la generación de clip previsualización. Ver la ventana de Log para mas detalles.</value>
   </data>
   <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
     <value>Fallo la generación de clip avance</value>
