--- a/VidCoder/Resources/Translations/SubtitleRes.zh.resx
+++ b/VidCoder/Resources/Translations/SubtitleRes.zh.resx
@@ -121,7 +121,7 @@
     <value>字幕</value>
   </data>
   <data name="RemoveSubtitleTrack" xml:space="preserve">
-    <value>移除字幕</value>
+    <value>移除此字幕轨</value>
   </data>
   <data name="SubtitlesFromSourceLabel" xml:space="preserve">
     <value>字幕来源：</value>
@@ -163,10 +163,10 @@
     <value>其他字幕轨将与内嵌字幕重迭。</value>
   </data>
   <data name="ForeignAudioSearch" xml:space="preserve">
-    <value>外语音频搜索</value>
+    <value>搜索外语音频</value>
   </data>
   <data name="AddSourceNoSubtitlesToolTip" xml:space="preserve">
-    <value>来源视频中无字幕。</value>
+    <value>源视频中无字幕。</value>
   </data>
   <data name="SrtFilePickerText" xml:space="preserve">
     <value>添加字幕文件</value>
@@ -175,6 +175,6 @@
     <value>复制此轨</value>
   </data>
   <data name="SubtitleCharsetDetectionFailedMessage" xml:space="preserve">
-    <value>无法检测字幕文件的编码。若要确保正确显示字幕，重新将文件保存为 UTF-8。</value>
+    <value>无法检测字幕编码。若要保证字幕正确显示，请将文件重新保存为 UTF-8 编码。</value>
   </data>
 </root>
